[gd_scene load_steps=15 format=3 uid="uid://dim4wtpu80hvw"]

[ext_resource type="Script" path="res://Script/Entity/Enemy/Monster/Ngu/Crate.gd" id="1_50by8"]
[ext_resource type="Texture2D" uid="uid://de2hli2r57np8" path="res://Asset/Weapon/Box.png" id="2_avsa5"]
[ext_resource type="Shader" path="res://Script/Function/Shader/flash.gdshader" id="2_jyvhe"]
[ext_resource type="Texture2D" uid="uid://my2aiu3aarmj" path="res://Asset/Monster/Small/ngu1.png" id="3_bnk7q"]
[ext_resource type="Texture2D" uid="uid://dvmfx2daujlrv" path="res://Asset/UI/HUD_Icon/Contract.png" id="3_enf5w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crosx"]
shader = ExtResource("2_jyvhe")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1ld7"]
size = Vector2(127, 84)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ufhti"]
radius = 22.0
height = 142.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ewleq"]
radius = 100.0

[sub_resource type="Animation" id="Animation_ucysm"]
resource_name = "Idle"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D3:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-34, 51)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D4:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(33, 51)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LegColiision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 21)]
}

[sub_resource type="Animation" id="Animation_g533y"]
resource_name = "Move"
length = 0.200005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D3:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-23, 57), Vector2(-34, 67), Vector2(-41, 57), Vector2(-34, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D4:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(23, 57), Vector2(34, 56), Vector2(41, 57), Vector2(34, 67)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0349066, -0.0349066]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LegColiision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 27), Vector2(0, 34), Vector2(0, 26), Vector2(0, 34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usp8w"]
_data = {
"Idle": SubResource("Animation_ucysm"),
"Move": SubResource("Animation_g533y")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4vcju"]
radius = 96.0
height = 512.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d8o7g"]
radius = 50.0
height = 160.0

[node name="Crate" type="RigidBody2D" groups=["Interact"]]
visibility_layer = 3
collision_layer = 2
collision_mask = 16
lock_rotation = true
script = ExtResource("1_50by8")
random = true
rarity = 5

[node name="Body" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_crosx")
position = Vector2(0, -22)
texture = ExtResource("2_avsa5")
vframes = 2
frame = 1

[node name="Sprite2D2" type="Sprite2D" parent="Body"]
use_parent_material = true
texture = ExtResource("2_avsa5")
vframes = 2

[node name="Sprite2D3" type="Sprite2D" parent="Body"]
show_behind_parent = true
use_parent_material = true
position = Vector2(-34, 51)
texture = ExtResource("3_bnk7q")
hframes = 2
vframes = 2
frame = 2

[node name="Sprite2D4" type="Sprite2D" parent="Body"]
show_behind_parent = true
use_parent_material = true
position = Vector2(33, 51)
texture = ExtResource("3_bnk7q")
hframes = 2
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b1ld7")

[node name="LegColiision" type="CollisionShape2D" parent="."]
position = Vector2(0, 21)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ufhti")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ewleq")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
z_index = -4
scale = Vector2(10, 10)
texture = ExtResource("3_enf5w")
hframes = 10
frame = 2

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usp8w")
}

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(70, 40)
target_position = Vector2(100, 0)
collision_mask = 16

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2(80, 30)
target_position = Vector2(0, 68)
collision_mask = 16

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(-70, 40)
target_position = Vector2(-100, 0)
collision_mask = 16

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2(-80, 30)
target_position = Vector2(0, 68)
collision_mask = 16

[node name="Bullet" type="Area2D" parent="."]
visible = false
collision_layer = 12
collision_mask = 4

[node name="BodyCollision" type="CollisionShape2D" parent="Bullet"]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4vcju")

[node name="Area" type="Area2D" parent="."]
position = Vector2(0, 10)
collision_layer = 12
collision_mask = 4

[node name="BodyCollision" type="CollisionShape2D" parent="Area"]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d8o7g")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Bullet" to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="Bullet" to="." method="_on_bullet_body_entered"]
[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
